[package]
name = "http_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
mime_guess = "2.0.4"
pretty_env_logger = "0.5.0"
proc-macro2 = "1.0.66"
quote = "1.0.31"
rustls = "0.21.1"
rustls-pemfile = "1.0.2"
syn = { version = "2.0.27", features = ["full", "fold"] }

[dev-dependencies]
rand = "0.8.5"
